@@ -1122,6 +1122,21 @@ Description: NVIDIA allocator runtime library${nvidia:VariantDesc}
  .
  This package contains the private nvidia-allocator runtime library.
 
+Package: lib${nvidia}-ngx1
+Architecture: amd64 ${arch:ppc64el}
+Multi-Arch: same
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${libcuda1} (= ${binary:Version}),
+ ${shlibs:Depends}, ${misc:Depends}
+Description: NVIDIA NGX runtime library${nvidia:VariantDescShort}
+ The NVIDIA binary driver provides optimized hardware acceleration of
+ OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server
+ for graphics cards using NVIDIA chip sets.
+ .
+ This package contains the NVIDIA NGX runtime library.
+
 Package: nvidia-opencl-common
 Architecture: i386 amd64 ppc64el
 Multi-Arch: foreign
