@@ -1,0 +1,1 @@
+libnvidia-ngx.so.#VERSION#		#LIBDIR#/#PRIVATE#
