@@ -1,0 +1,2 @@
+#LIBDIR#/#PRIVATE#/libnvidia-ngx.so.#VERSION#	#LIBDIR#/#PRIVATE#/libnvidia-ngx.so.1
+#LIBDIR#/#PRIVATE#/libnvidia-ngx.so.1		#LIBDIR#/#PRIVATE#/libnvidia-ngx.so
