@@ -1,0 +1,7 @@
+# The NVIDIA license does not allow any form of modification.
+[i386]: binary-file-built-without-LFS-support
+hardening-no-bindnow
+hardening-no-fortify-functions
+
+# Lintian and debhelper disagree w.r.t. a library in a private directory.
+package-has-unnecessary-activation-of-ldconfig-trigger
