@@ -1,0 +1,19 @@
+libnvidia-ngx.so.1 #PACKAGE# #MINVER#
+* Build-Depends-Package: #PACKAGE#
+ NVSDK_NGX_CUDA_CreateFeature@Base 450
+ NVSDK_NGX_CUDA_EvaluateFeature@Base 450
+ NVSDK_NGX_CUDA_GetParameters@Base 450
+ NVSDK_NGX_CUDA_GetScratchBufferSize@Base 450
+ NVSDK_NGX_CUDA_Init@Base 450
+ NVSDK_NGX_CUDA_Init_Ext@Base 450
+ NVSDK_NGX_CUDA_ReleaseFeature@Base 450
+ NVSDK_NGX_CUDA_Shutdown@Base 450
+ NVSDK_NGX_VULKAN_CreateFeature@Base 450
+ NVSDK_NGX_VULKAN_EvaluateFeature@Base 450
+ NVSDK_NGX_VULKAN_GetParameters@Base 450
+ NVSDK_NGX_VULKAN_GetScratchBufferSize@Base 450
+ NVSDK_NGX_VULKAN_Init@Base 450
+ NVSDK_NGX_VULKAN_Init_Ext@Base 450
+ NVSDK_NGX_VULKAN_ReleaseFeature@Base 450
+ NVSDK_NGX_VULKAN_RequiredExtensions@Base 450
+ NVSDK_NGX_VULKAN_Shutdown@Base 450
