@@ -91,6 +91,7 @@ nvidia-graphics-drivers (450.51-1) UNRELEASED; urgency=medium
   * Refresh patches.
   * Update symbols files.
   * Remove libnvidia-fatbinaryloader package.
+  * libnvidia-ngx1: New package for the NVIDIA NGX runtime library.
 
  -- Andreas Beckmann <anbe@debian.org>  Tue, 30 Jun 2020 10:28:49 +0200
 
